Fixed many of the issues in GFN
Fixed logo on mobile phones. Fixed off-center text. Removed the useless padding everywhere. Centered images, headers, and the main logo. Made the main logo a URL. Made the main logo an image.

--- a/news/news.css
+++ b/news/news.css
@@ -32,22 +32,22 @@ nav{
 	grid-area: nav;
 }
 #title{
-    display: block;	
-	grid-area: title;
 	padding:0;
-	padding-left:35%;
+	text-align:center;
+	display: block;	
+	grid-area: title;
 }
-#title h1{
-	font-family:Chomsky;
-	font-weight: normal;
-	line-height:0;
-	font-size:50px;
+#title img{
+	width:500px;
 }
-#title h2{
-	line-height:0;
-	font-size:15px;
-	margin-left:12%;
-	font-style:italic;
+#titlenews{
+	padding:0;
+	text-align:center;
+	display: block;	
+	grid-area: title;
+}
+#titlenews img{
+	width:350px;
 }
 
 header{
@@ -56,9 +56,9 @@ header{
 main{
 	background: #e6e6e6;
 	grid-area: main;
+	text-align:center;
 }
 main h2{
-	padding-left: 25%;
 }
 main img{
 	float:left;
@@ -78,18 +78,16 @@ footer{
 #content1{
 	background: #e6e6e6;
 	grid-area: content1;
+	text-align: center;
 }
 #content1 img{
 	float: center;
-	padding-left: 10%;
 	padding-bottom: 1%;
 	width: 77%;
 	max-width:77%;
 	height: auto;
 }
-#content1 h2{
-	padding-left: 30%;
-}
+
 #content2{
 	background: #e6e6e6;
 	grid-area: content2;
@@ -119,21 +117,26 @@ footer{
 	grid-area: content8;
 }
 #body{
-	margin-left:10%;
-	margin-right:10%;
+	margin-left:30%;
+	margin-right:30%;
 
 }
+#body p{
+	line-height:1.66667;
+	color:#333333;
+	}
 #body img{
 	float:left;
 	width:30%;
+	padding-right:10px;
 }
 #body h3{
-	margin-left:40%;
+	text-align:center;
 	font-size:20px;
 	line-height:0;	
 }
 #body h5{
-	margin-left:50%;
+	text-align:center;
 	line-height:0;
 	
 }
@@ -182,24 +185,12 @@ footer{
 }
 
 @media only screen and (max-width: 1400px){
-	#title{
-		padding-left:30%;
 	}
 }
 	
 @media only screen and (max-width: 1200px){
-	#title{
-		padding-left:25%;
-	}
-	#body h3{
-		margin-left:15%;
-	}
 	.container h2{
 		font-size:1em;
-	}
-
-	#content1 h2{
-		margin-left:8%;
 	}
 
 }
@@ -223,42 +214,26 @@ footer{
 		"footer";
 		
 	}
-	#title{
-		padding-left:20%;
-	}
-	#body h3{
-		margin-left:10%;
-	}
 	#content1 img{
-		margin-left:22%;
 		width: 30%;
 
 }
 @media only screen and (max-width: 500px){
-	#title{
-		padding-left:10%;
-	}
-	#title h1{
-		font-size:30px;
-	}
-	#title h2{
-		margin-left:18%;
-		font-size:10px;
+	#body {
+		margin-left:10%;
+		margin-right:10%;
+		font-size:14px;
 	}
 	#body h3{
-		margin-left:0%;
 		font-size:14px;
 	}
 
-	#body h5{
-		margin-left:40%;
-	}
 	#body img{
 		width:100%;
 		padding-bottom:10px;
 	}
-	main h2{
-		margin-left:0%;
+	#title img{
+		width: 400px;
 	}
 	.container h2{
 		font-size:.75em;
